Fix overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -23,6 +23,8 @@ body {
 }
 
 main{
+	max-width: 100vw;
+	overflow: hidden;
 }
 a {
   color: inherit;
